bundled_metadata/force-app/main/default/objects/Integration_Setting__c/Integration_Setting__c.object-meta.xml
<CustomObject>
    <label>Integration Setting</label>
    <nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>