bundled_metadata/force-app/main/default/objects/Integration_Setting__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The functionality category the integration setting relates to</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>