bundled_metadata/force-app/main/default/objects/Integration_Setting__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>View tokens within 50 minutes based on creation time</description>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>