bundled_metadata/force-app/main/default/objects/Integration_Setting__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <description>The token used for authorization</description>
    <label>Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>