bundled_metadata/force-app/main/default/objects/Integration_Setting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of token used for authorization</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>