bundled_metadata/force-app/main/default/objects/Integration_Setting__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Stores the encrypted value of the integration setting such as client IDs or client secret</description>
    <label>Value</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>